<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <ImageView
            android:id="@+id/thumbnail_image_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:contentDescription="@string/Todo" />

        <TextView
            android:text="@string/movieTitle"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_marginStart="16dp"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:padding="@dimen/padding_layout"
            android:textSize="20sp" />
        <TextView
            android:text="@string/userRating"
            android:textSize="25sp"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/userrating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_marginStart="16dp"
            android:padding="@dimen/padding_layout"
            android:textSize="20sp" />
        <TextView
            android:text="@string/releaseDate"
            android:textSize="25sp"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/releasedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:padding="@dimen/padding_layout"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/layout_margin_left" />
        <TextView
            android:text="@string/plotSynopsis"
            android:textSize="25sp"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/plotsynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_left"
            android:padding="@dimen/padding_layout"
            android:textSize="20sp"
            tools:ignore="RtlCompat" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/trailer"
            app:layout_constraintLeft_toLeftOf="parent" />

    </LinearLayout>

</ScrollView>


